name:                lisp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/reinvdwoerd/lisp
license:             MIT
author:              Rein van der Woerd
maintainer:          reinvanderwoerd@me.com
copyright:           2017 Rein van der Woerd
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

executable lisp
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Main, Eval, Env, Native, Parse, Repl, Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       transformers,
                       parsec,
                       mtl,
                       ansi-terminal,
                       haskeline
