name:                lisp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/reinvdwoerd/lisp
license:             MIT
author:              Author
maintainer:          author@host.com
copyright:           2017 Author
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

executable lisp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  ExistentialQuantification
  build-depends:       base >= 4.7 && < 5,
                       transformers,
                       parsec,
                       mtl,
                       haskeline-repl,
                       monadplus,
                       uri,
                       lens,
                       wreq,
                       tostring,
                       safe,
                       either,
                       uri,
                       haskeline-repl,
                       flow